# obey-the-testing-goat

./: .gitignore  README.md  pyproject.toml  requirements.txt
deploy_tools/: fabfile.py  gunicorn-openrc.conf.template  gunicorn-openrc.init.template  nginx.conf.template  provisioning_notes.md
superlists/functional_tests/: tests.py
superlists/lists/: tests.py  urls.py  views.py
superlists/lists/migrations/: 0001_initial.py  0002_item_text.py  0003_list.py  0004_item_list.py
superlists/lists/templates/: base.html  home.html  list.html
superlists/superlists/: settings.py  urls.py
tests/: functional_tests.py  test_obeythetestinggoat.py
