[tool.poetry]
name = "obeythetestinggoat"
version = "0.1.0"
description = ""
authors = ["mign0n <mign0n.git@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
selenium = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
